fix various overflow bugs, modal tweaks

--- a/src/_common/modal/modal.styl
+++ b/src/_common/modal/modal.styl
@@ -24,6 +24,7 @@
 
 .modal-sticker-layer
 	position: relative
+	min-height: 100vh
 
 	@media $media-sm-up
 		padding: 30px 0
